# hw_12.2_unittest

./: pyproject.toml
tests/: test_arrs.py
