[tool.poetry]
name = "hw 12-2 unittest"
version = "0.1.0"
description = ""
authors = ["Valera Babkin <valera.babkin.13@mail.ru>"]
readme = "README.md"
packages = [{include = "hw 12"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
coverage = "7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
